--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -1,11 +1,12 @@
 <Window
-	x:Class="GetAllMethods.Views.MainWindow"
+	x:Class="GetnMethods.Views.MainWindow"
 	xmlns="https://github.com/avaloniaui"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:dialogHost="clr-namespace:DialogHostAvalonia;assembly=DialogHost.Avalonia"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:vm="using:GetAllMethods.ViewModels"
-	Title="GetAllMethods"
+	xmlns:vm="using:GetnMethods.ViewModels"
+	Title="GetnMethods"
 	d:DesignHeight="450"
 	d:DesignWidth="800"
 	x:DataType="vm:MainWindowViewModel"
@@ -13,6 +14,7 @@
 	ExtendClientAreaToDecorationsHint="True"
 	Icon="/Assets/report-repo.ico"
 	TransparencyLevelHint="AcrylicBlur"
+	xmlns:local="using:GetnMethods"
 	mc:Ignorable="d">
 
 	<Design.DataContext>
@@ -47,68 +49,77 @@
 			</ExperimentalAcrylicBorder.Material>
 		</ExperimentalAcrylicBorder>
 
-		<Grid ColumnDefinitions="10,*" RowDefinitions="Auto,Auto,*">
+		<dialogHost:DialogHost CloseOnClickAway="True" IsOpen="False">
+			<Grid ColumnDefinitions="10,*" RowDefinitions="Auto,Auto,*">
 
-			<DockPanel
-				Grid.Row="0"
-				Grid.Column="1"
-				HorizontalAlignment="Left">
+				<DockPanel
+					Grid.Row="0"
+					Grid.Column="1"
+					HorizontalAlignment="Left">
 
-				<StackPanel DockPanel.Dock="Left" Orientation="Horizontal">
-					<Button Margin="4" Command="{Binding GetFileCommand}">
-						<PathIcon Data="{StaticResource globe_search_regular}" Foreground="#61AFEF" />
+					<StackPanel DockPanel.Dock="Left" Orientation="Horizontal">
+						<Button Margin="4" Command="{Binding GetFileCommand}">
+							<PathIcon Data="{StaticResource globe_search_regular}" Foreground="#61AFEF" />
+						</Button>
+					</StackPanel>
+					<TextBox
+						Grid.Column="0"
+						Width="600"
+						Margin="8"
+						HorizontalAlignment="Stretch"
+						VerticalContentAlignment="Center"
+						DockPanel.Dock="Left"
+						FontSize="12"
+						IsReadOnly="True"
+						Text="{Binding SelectedDirectory}"
+						Watermark="Selected File" />
+					<Button
+						Margin="4"
+						VerticalContentAlignment="Center"
+						Command="{Binding RunScriptCommand}">
+						<PathIcon Data="{StaticResource play_regular}" Foreground="#98C379" />
 					</Button>
-				</StackPanel>
-				<TextBox
-					Grid.Column="0"
-					Width="600"
-					Margin="8"
-					HorizontalAlignment="Stretch"
-					VerticalContentAlignment="Center"
-					DockPanel.Dock="Left"
-					FontSize="12"
-					IsReadOnly="True"
-					Text="{Binding SelectedDirectory}"
-					Watermark="Selected File" />
-				<Button
-					Margin="4"
-					VerticalContentAlignment="Center"
-					Command="{Binding RunScriptCommand}">
-					<PathIcon Data="{StaticResource play_regular}" Foreground="#98C379" />
-				</Button>
-				<Button
-					Margin="4"
-					VerticalContentAlignment="Center"
-					Command="{Binding ClearLogWindowCommand}">
-					<PathIcon Data="{StaticResource erase_regular}" Foreground="#E06C75" />
-				</Button>
-			</DockPanel>
+					<Button
+						Margin="4"
+						VerticalContentAlignment="Center"
+						Command="{Binding ClearLogWindowCommand}">
+						<PathIcon Data="{StaticResource erase_regular}" Foreground="#E06C75" />
+					</Button>
+					<Button
+						Margin="4"
+						VerticalContentAlignment="Center"
+						Command="{Binding DownloadCommand}">
+						<PathIcon Data="{StaticResource arrow_download_regular}" Foreground="#61AFEF" />
+					</Button>
+				</DockPanel>
 
-			<Border
-				Grid.Row="1"
-				Grid.RowSpan="2"
-				Grid.Column="1"
-				VerticalAlignment="Stretch"
-				Background="#282C34"
-				CornerRadius="4 0 0 0"
-				DockPanel.Dock="Bottom"
-				SizeChanged="Control_OnSizeChanged">
-
-				<ScrollViewer
-					x:Name="LogScrollViewer"
-					Name="ScrollOutputViewer"
-					Height="400"
+				<Border
+					Grid.Row="1"
+					Grid.RowSpan="2"
+					Grid.Column="1"
 					VerticalAlignment="Stretch"
-					HorizontalScrollBarVisibility="Auto">
-					<SelectableTextBlock
-						x:Name="LogViewer"
-						Padding="13"
-						FontWeight="DemiBold"
-						Foreground="#98C379"
-						Text="{Binding LogMessages}" />
-				</ScrollViewer>
-			</Border>
-		</Grid>
+					Background="#282C34"
+					CornerRadius="4 0 0 0"
+					DockPanel.Dock="Bottom"
+					SizeChanged="Control_OnSizeChanged">
+
+					<ScrollViewer
+						x:Name="LogScrollViewer"
+						Name="ScrollOutputViewer"
+						Height="400"
+						VerticalAlignment="Stretch"
+						HorizontalScrollBarVisibility="Auto">
+						<SelectableTextBlock
+							x:Name="LogViewer"
+							Padding="13"
+							FontWeight="DemiBold"
+							Foreground="#98C379"
+							Text="{Binding LogMessages}" />
+					</ScrollViewer>
+				</Border>
+			</Grid>
+		</dialogHost:DialogHost>
+		
 	</Panel>
 
 </Window>
