--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -23,135 +23,41 @@
 		<vm:MainWindowViewModel />
 	</Design.DataContext>
 
-	<Grid
+
+	<Panel Background="{DynamicResource ThemeContentBackgroundColor}">
+		<Grid
 		HorizontalAlignment="Stretch"
 		VerticalAlignment="Stretch"
 		RowDefinitions="Auto, *">
-		<Grid
-			Grid.Row="1"
-			HorizontalAlignment="Stretch"
-			VerticalAlignment="Stretch"
-			ColumnDefinitions="*"
-			RowDefinitions="Auto, *, Auto">
-			<DockPanel
-				Grid.Row="0"
-				Grid.Column="1"
-				HorizontalAlignment="Stretch"
-				Background="{DynamicResource ThemeContentBackgroundColor}">
-				<StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal">
-					<TextBox
-						Grid.Column="0"
-						Width="600"
-						Margin="8"
-						HorizontalAlignment="Stretch"
-						VerticalContentAlignment="Center"
-						DockPanel.Dock="Left"
-						FontSize="12"
-						IsReadOnly="True"
-						Text="{Binding SelectedDirectory}"
-						Watermark="Selected File" />
-					<ui:CommandBar>
-						<ui:CommandBar.PrimaryCommands>
-							<ui:CommandBarButton
-								Command="{Binding GetFileCommand}"
-								Foreground="#E5C07B"
-								IconSource="OpenFile"
-								Label="Get File" />
-							<ui:CommandBarSeparator />
-							<ui:CommandBarButton
-								Command="{Binding RunScriptCommand}"
-								Foreground="#98C379"
-								IconSource="Play"
-								Label="Run" />
-							<ui:CommandBarButton
-								Command="{Binding ClearLogWindowCommand}"
-								Foreground="#E06C75"
-								IconSource="Clear"
-								Label="Clear" />
-							<ui:CommandBarButton
-								Command="{Binding DownloadCommand}"
-								Foreground="#61AFEF"
-								IconSource="Download"
-								Label="Download" />
-						</ui:CommandBar.PrimaryCommands>
-					</ui:CommandBar>
-				</StackPanel>
-
-				<!--<StackPanel DockPanel.Dock="Left" Orientation="Horizontal">
-							<Button Margin="4" Command="{Binding GetFileCommand}">
-								<PathIcon Data="{StaticResource globe_search_regular}" Foreground="#61AFEF" />
-							</Button>
-						</StackPanel>
-						<TextBox
-							Grid.Column="0"
-							Width="600"
-							Margin="8"
-							HorizontalAlignment="Stretch"
-							VerticalContentAlignment="Center"
-							DockPanel.Dock="Left"
-							FontSize="12"
-							IsReadOnly="True"
-							Text="{Binding SelectedDirectory}"
-							Watermark="Selected File" />
-						<ComboBox
-							Grid.Column="0"
-							Width="200"
-							Margin="8"
-							HorizontalAlignment="Stretch"
-							VerticalContentAlignment="Center"
-							DockPanel.Dock="Left"
-							FontSize="12" />
-						<Button
-							Margin="4"
-							VerticalContentAlignment="Center"
-							Command="{Binding RunScriptCommand}">
-							<PathIcon Data="{StaticResource play_regular}" Foreground="#98C379" />
-						</Button>
-						<Button
-							Margin="4"
-							VerticalContentAlignment="Center"
-							Command="{Binding ClearLogWindowCommand}">
-							<PathIcon Data="{StaticResource erase_regular}" Foreground="#E06C75" />
-						</Button>
-						<Button
-							Margin="4"
-							VerticalContentAlignment="Center"
-							Command="{Binding DownloadCommand}">
-							<PathIcon Data="{StaticResource arrow_download_regular}" Foreground="#61AFEF" />
-						</Button>-->
-			</DockPanel>
 			<Grid
 				Grid.Row="1"
 				HorizontalAlignment="Stretch"
 				VerticalAlignment="Stretch"
-				Background="{DynamicResource ThemeContentBackgroundColor}"
-				ZIndex="1000">
-				<dialogHost:DialogHost CloseOnClickAway="True" IsOpen="False">
-					<views:MainView />
-				</dialogHost:DialogHost>
+				ColumnDefinitions="50, *"
+				RowDefinitions="Auto, *, Auto">
+				<views:MainMenuBarView Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="0" />
+				<Grid
+					Grid.Column="0"
+					Grid.ColumnSpan="2"
+					Grid.Row="1"
+					HorizontalAlignment="Stretch"
+					VerticalAlignment="Stretch"
+					Background="{DynamicResource ThemeContentBackgroundColor}"
+					ZIndex="1000">
+					<dialogHost:DialogHost CloseOnClickAway="True" IsOpen="False">
+						<views:MainView />
+					</dialogHost:DialogHost>
+				</Grid>
+				<views:MainStatusBarView
+					Grid.Column="0"
+					Grid.ColumnSpan="2"
+					Grid.Row="2"
+					HorizontalAlignment="Stretch"
+					VerticalAlignment="Stretch"
+					IsVisible="True" />
 			</Grid>
-			<views:MainStatusBarView
-				Grid.Row="2"
-				HorizontalAlignment="Stretch"
-				VerticalAlignment="Stretch"
-				IsVisible="True" />
 		</Grid>
-	</Grid>
-	<!--<Panel>
-		<ExperimentalAcrylicBorder IsHitTestVisible="False">
-			<ExperimentalAcrylicBorder.Material>
-				<ExperimentalAcrylicMaterial
-					BackgroundSource="Digger"
-					MaterialOpacity="0.65"
-					TintColor="{DynamicResource BgColor}"
-					TintOpacity="1" />
-			</ExperimentalAcrylicBorder.Material>
-		</ExperimentalAcrylicBorder>
-
-		<dialogHost:DialogHost CloseOnClickAway="True" IsOpen="False">
-			<views:MainView />
-		</dialogHost:DialogHost>
 		
-	</Panel>-->
+	</Panel>
 
 </Window>
