--- a/Views/MainView.axaml
+++ b/Views/MainView.axaml
@@ -17,7 +17,7 @@
 		<vm:MainWindowViewModel />
 	</Design.DataContext>
 
-	<!--<UserControl.Styles>
+	<UserControl.Styles>
 		<Style Selector="Button.action">
 			<Setter Property="Margin" Value="0 4" />
 			<Setter Property="Height" Value="32" />
@@ -133,7 +133,7 @@
 		<Style Selector="ui|NavigationViewItem.AppNav uip|NavigationViewItemPresenter:selected /template/ ContentPresenter#Icon">
 			<Setter Property="Foreground" Value="{DynamicResource AccentFillColorDefaultBrush}" />
 		</Style>
-	</UserControl.Styles>-->
+	</UserControl.Styles>
 
 	<Grid Background="{DynamicResource ThemeContentBackgroundColor}" RowDefinitions="Auto, *">
 		<ui:NavigationView
@@ -141,15 +141,12 @@
 			Grid.RowSpan="2"
 			AlwaysShowHeader="False"
 			Classes="AppNav"
-			Header="Header"
-			HeaderTemplate="{DynamicResource NavViewHeaderTemplate}"
 			IsBackButtonVisible="False"
 			IsPaneOpen="True"
+			Margin="2,0,0,0"
 			IsPaneToggleButtonVisible="False"
 			IsSettingsVisible="True"
 			PaneDisplayMode="LeftCompact">
-
-
 			<ui:NavigationView.PaneFooter>
 				<StackPanel
 					Name="FooterStackPanel"
@@ -165,14 +162,12 @@
 			</ui:NavigationView.PaneFooter>
 			<ui:NavigationView.Content>
 				<Grid ColumnDefinitions="0,*" RowDefinitions="Auto,Auto,*">
-			
-
 					<Border
 						Grid.Row="1"
 						Grid.RowSpan="2"
 						Grid.Column="1"
 						VerticalAlignment="Stretch"
-						Background="#282C34"
+						Background="{DynamicResource NormalBlackDark}"
 						CornerRadius="0 0 0 0"
 						DockPanel.Dock="Bottom"
 						SizeChanged="Control_OnSizeChanged">
@@ -184,12 +179,13 @@
 							HorizontalScrollBarVisibility="Auto">
 							<SelectableTextBlock
 								x:Name="LogViewer"
-								Padding="13"
+								Padding="10"
 								FontWeight="DemiBold"
-								Foreground="#98C379"
+								Foreground="{DynamicResource NormalGreenDark}"
 								Text="{Binding LogMessages}" />
 						</ScrollViewer>
 					</Border>
+
 				</Grid>
 			</ui:NavigationView.Content>
 		</ui:NavigationView>
