--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -12,6 +12,7 @@
 	Title="GetnMethods"
 	d:DesignHeight="550"
 	d:DesignWidth="1000"
+	WindowState="Maximized"
 	x:DataType="vm:MainWindowViewModel"
 	Background="Transparent"
 	ExtendClientAreaToDecorationsHint="True"
