--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -32,6 +32,7 @@
 				VerticalAlignment="Stretch"
 				RowDefinitions="Auto, *">
 				<Grid
+					Margin="7"
 					Grid.Row="1"
 					HorizontalAlignment="Stretch"
 					VerticalAlignment="Stretch"
