adding select all cmd

--- a/Views/Controls/MainMenuBarView.axaml
+++ b/Views/Controls/MainMenuBarView.axaml
@@ -49,7 +49,7 @@
 					<ui:CommandBarButton
 						Command="{Binding SwitchContextCommand}"
 						Foreground="#E06C75"
-						IconSource="References"
+						IconSource="Library"
 						Label="Swap" />
 					
 				</ui:CommandBar.PrimaryCommands>
