--- a/Views/Controls/MainAppSplashContent.axaml
+++ b/Views/Controls/MainAppSplashContent.axaml
@@ -4,21 +4,22 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	d:DesignHeight="450"
-	d:DesignWidth="800"
+	d:DesignHeight="400"
+	d:DesignWidth="600"
 	mc:Ignorable="d">
-	<Grid RowDefinitions="*,Auto,150">
-		<Image
-			Width="128"
-			Height="128"
-			IsHitTestVisible="False"
-			Source="/Assets/report-repo.ico" />
-		<ProgressBar
-			IsIndeterminate="True"
-			IsHitTestVisible="False"
-			Height="20"
-			VerticalAlignment="Center"
-			HorizontalAlignment="Center"
-			Width="200" />
-	</Grid>
+	<Border Background="{DynamicResource BackgroundDark}">
+		<Grid RowDefinitions="*,Auto,150">
+			<Image
+				Width="128"
+				Height="128"
+				IsHitTestVisible="False"
+				Source="/Assets/report-repo.ico" />
+			<ProgressBar
+				Grid.Row="1"
+				Width="45"
+				Height="45"
+				Classes="Circle"
+				IsIndeterminate="True" />
+ 		</Grid>
+	</Border>
 </UserControl>
