--- a/Views/MainView.axaml
+++ b/Views/MainView.axaml
@@ -8,6 +8,7 @@
 	xmlns:uip="using:FluentAvalonia.UI.Controls.Primitives"
 	xmlns:vm="clr-namespace:GetnMethods.ViewModels"
 	xmlns:wnd="using:FluentAvalonia.UI.Windowing"
+	xmlns:views="clr-namespace:GetnMethods"
 	d:DesignHeight="650"
 	d:DesignWidth="1500"
 	x:CompileBindings="True"
@@ -17,7 +18,7 @@
 		<vm:MainWindowViewModel />
 	</Design.DataContext>
 
-	<UserControl.Styles>
+	<!--<UserControl.Styles>
 		<Style Selector="Button.action">
 			<Setter Property="Margin" Value="0 4" />
 			<Setter Property="Height" Value="32" />
@@ -133,21 +134,20 @@
 		<Style Selector="ui|NavigationViewItem.AppNav uip|NavigationViewItemPresenter:selected /template/ ContentPresenter#Icon">
 			<Setter Property="Foreground" Value="{DynamicResource AccentFillColorDefaultBrush}" />
 		</Style>
-	</UserControl.Styles>
+	</UserControl.Styles>-->
 
-	<Grid Background="{DynamicResource ThemeContentBackgroundColor}" RowDefinitions="Auto, *">
+	<Grid Background="{DynamicResource ThemeContentBackgroundColor}" RowDefinitions="Auto,*">
+	
+		<views:MainMenuBarView Grid.Row="0" Grid.Column="2" />
 		<ui:NavigationView
-			Name="NavView"
-			Grid.RowSpan="2"
-			Margin="2,0,0,0"
+			Grid.Row="1"
 			AlwaysShowHeader="False"
-			Classes="AppNav"
-			IsBackButtonVisible="False"
-			IsPaneOpen="True"
-			IsPaneToggleButtonVisible="False"
-			IsSettingsVisible="True"
-			PaneDisplayMode="LeftCompact">
-			<ui:NavigationView.PaneFooter>
+                           PaneDisplayMode="Left"
+                           Grid.RowSpan="2"
+                           Name="NavView"
+                           IsSettingsVisible="False"
+                           IsBackEnabled="{Binding #FrameView.CanGoBack}">
+			<!--<ui:NavigationView.PaneFooter>
 				<StackPanel
 					Name="FooterStackPanel"
 					IsVisible="True"
@@ -159,7 +159,7 @@
 						<PathIcon Data="{StaticResource arrow_download_regular}" Foreground="#61AFEF" />
 					</Button>
 				</StackPanel>
-			</ui:NavigationView.PaneFooter>
+			</ui:NavigationView.PaneFooter>-->
 			<ui:NavigationView.Content>
 				<Grid ColumnDefinitions="0,*" RowDefinitions="Auto,Auto,*">
 					<Border
@@ -199,6 +199,7 @@
 					</Border>
 				</Grid>
 			</ui:NavigationView.Content>
+			<ui:Frame Name="FrameView" />
 		</ui:NavigationView>
 
 
