--- a/src/InsightBytes/Views/MainWindow.axaml
+++ b/src/InsightBytes/Views/MainWindow.axaml
@@ -4,12 +4,27 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:view="using:InsightBytes"
-	
-	xmlns:vm="using:InsightBytes.ViewModels"
-	Title="Avalonia Nav"
+	xmlns:views="using:InsightBytes"
 	d:DesignHeight="720"
 	d:DesignWidth="1280"
-	x:CompileBindings="True">
-	<view:MainView />
+	x:CompileBindings="True"
+	Icon="/Assets/report-repo.ico"
+	Background="Transparent"
+	TransparencyLevelHint="AcrylicBlur"
+	ExtendClientAreaToDecorationsHint="True">
+
+	<Panel PointerPressed="Panel_PointerPressed" >
+		<ExperimentalAcrylicBorder IsHitTestVisible="False">
+			<ExperimentalAcrylicBorder.Material>
+				<ExperimentalAcrylicMaterial
+					BackgroundSource="Digger"
+					MaterialOpacity="0.65"
+					TintColor="Black"
+					TintOpacity="1" />
+			</ExperimentalAcrylicBorder.Material>
+		</ExperimentalAcrylicBorder>
+
+		<views:MainView/>
+	</Panel>
+
 </Window>
