--- a/src/InsightBytes/Styles/CustomTheme.axaml
+++ b/src/InsightBytes/Styles/CustomTheme.axaml
@@ -1,5 +1,4 @@
-<Styles xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Styles xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 	<Styles.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
@@ -9,4 +8,3 @@
 		</ResourceDictionary>
 	</Styles.Resources>
 </Styles>
-			 
