--- a/src/InsightBytes/Controls/HomeMenuBarControl.axaml
+++ b/src/InsightBytes/Controls/HomeMenuBarControl.axaml
@@ -6,16 +6,29 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:ui="using:FluentAvalonia.UI.Controls"
 	xmlns:vm="using:InsightBytes.ViewModels"
+	xmlns:conv="using:InsightBytes.Converters"
 	d:DesignHeight="50"
 	d:DesignWidth="1000"
 	x:CompileBindings="True"
 	x:DataType="vm:HomeControlViewModel"
 	mc:Ignorable="d">
 
+	<UserControl.Resources>
+		<conv:IntToSymbolConverter x:Key="IntToSymbolConverter"/>
+	</UserControl.Resources>
+
 	<Design.DataContext>
 		<vm:HomeControlViewModel />
 	</Design.DataContext>
 
+	<UserControl.Styles>
+		<Style Selector="Button">
+			<Setter Property="Background" Value="Transparent" />
+			<Setter Property="BorderBrush" Value="Transparent" />
+			<Setter Property="FontSize" Value="20" />
+			<Setter Property="VerticalAlignment" Value="Center" />
+		</Style>
+	</UserControl.Styles>
 
 	<Grid
 		Name="StatusBar"
@@ -36,36 +49,20 @@
 				IsReadOnly="True"
 				Text="{Binding SelectedDirectory}"
 				Watermark="Selected File" />
-			<Button
-				VerticalAlignment="Center"
-				Background="Transparent"
-				BorderBrush="Transparent"
-				Command="{Binding GetFileCommand}"
-				FontSize="20">
+			<Button Command="{Binding GetFileCommand}">
 				<ui:SymbolIcon Foreground="{DynamicResource NormalYellowDark}" Symbol="OpenFile" />
 			</Button>
-			<Button
-				VerticalAlignment="Center"
-				Background="Transparent"
-				BorderBrush="Transparent"
-				Command="{Binding RunScriptCommand}"
-				FontSize="20">
+			<Button IsVisible="{Binding IsPlayVisible}"  Command="{Binding RunScriptCommand}">
 				<ui:SymbolIcon Foreground="{DynamicResource NormalGreenDark}" Symbol="PlayFilled" />
 			</Button>
-			<Button
-				VerticalAlignment="Center"
-				Background="Transparent"
-				BorderBrush="Transparent"
-				Command="{Binding ClearLogWindowCommand}"
-				FontSize="20">
+			<Button IsVisible="{Binding IsPauseVisible}" Command="{Binding TogglePauseCommand}">
+				<ui:SymbolIcon Foreground="{DynamicResource NormalGreenDark}"
+			   Symbol="{Binding SymbolCode, Converter={StaticResource IntToSymbolConverter}}" />
+			</Button>
+			<Button Command="{Binding ClearLogWindowCommand}">
 				<ui:SymbolIcon Foreground="{DynamicResource NormalRedDark}" Symbol="Clear" />
 			</Button>
-			<Button
-				VerticalAlignment="Center"
-				Background="Transparent"
-				BorderBrush="Transparent"
-				Command="{Binding DownloadCommand}"
-				FontSize="20">
+			<Button Command="{Binding DownloadCommand}">
 				<ui:SymbolIcon Foreground="{DynamicResource NormalBlueDark}" Symbol="Download" />
 			</Button>
 
