--- a/src/InsightBytes/Views/MainWindow.axaml
+++ b/src/InsightBytes/Views/MainWindow.axaml
@@ -8,23 +8,6 @@
 	d:DesignHeight="720"
 	d:DesignWidth="1280"
 	x:CompileBindings="True"
-	Icon="/Assets/report-repo.ico"
-	Background="Transparent"
-	TransparencyLevelHint="AcrylicBlur"
-	ExtendClientAreaToDecorationsHint="True">
-
-	<Panel PointerPressed="Panel_PointerPressed" >
-		<ExperimentalAcrylicBorder IsHitTestVisible="False">
-			<ExperimentalAcrylicBorder.Material>
-				<ExperimentalAcrylicMaterial
-					BackgroundSource="Digger"
-					MaterialOpacity="0.65"
-					TintColor="Black"
-					TintOpacity="1" />
-			</ExperimentalAcrylicBorder.Material>
-		</ExperimentalAcrylicBorder>
-
-		<views:MainView/>
-	</Panel>
-
+	Title="Insight Bytes">
+	<views:MainView/>
 </Window>
